--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,11 +2,14 @@
 name = "scoring-system"
 version = "0.1.0"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "ege-api",
+    "ege-shared",
+]
+
+[tool.uv.sources]
+ege-api = { workspace = true }
+ege-shared = { workspace = true }
 
 [tool.uv.workspace]
 members = ["api_service", "shared"]
-[tool.aerich]
-tortoise_orm = "api_service.src.database.TORTOISE_ORM"
-location = "./migrations"
-src_folder = "./."
