feat: add logging api_service

--- a/api_service/pyproject.toml
+++ b/api_service/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pydantic-settings",
     "tomlkit>=0.13.3",
     "ege-shared",
+    "loguru>=0.7.3",
 ]
 
 [tool.uv.sources.ege-shared]
