feat: add logging tg and vk bots service

--- a/tg_bot_service/pyproject.toml
+++ b/tg_bot_service/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "aiohttp",
     "pydantic-settings",
     "ege-shared",
+    "loguru>=0.7.3",
 ]
 [build-system]
 requires = ["hatchling"]
