--- a/api_service/pyproject.toml
+++ b/api_service/pyproject.toml
@@ -20,3 +20,19 @@ workspace = true
 tortoise_orm = "api_service.src.database.TORTOISE_ORM"
 location = "./migrations"
 src_folder = "./src"
+
+[dependency-groups]
+dev = [
+    "httpx>=0.28.1",
+    "pytest>=9.0.1",
+    "pytest-asyncio>=1.3.0",
+]
+
+[tool.pytest.ini_options]
+pythonpath = ["src"]
+testpaths = ["tests"]
+asyncio_mode = "auto"
+filterwarnings = [
+    "ignore::DeprecationWarning",
+    "ignore::RuntimeWarning"
+]
